--- a/homework/wzwLab/app/src/main/res/layout/activity_login.xml
+++ b/homework/wzwLab/app/src/main/res/layout/activity_login.xml
@@ -82,7 +82,7 @@
 
 
         <TextView
-            android:id="@+id/btn_design"
+            android:id="@+id/tv_register"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -92,11 +92,11 @@
             android:textColor="#000000"
             android:textSize="15dp"
             android:textStyle="bold"
-
+            android:onClick="tv_register"
             />
 
         <TextView
-            android:id="@+id/btn_register"
+            android:id="@+id/tv_forget"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -106,7 +106,7 @@
             android:textColor="#000000"
             android:textSize="15dp"
             android:textStyle="bold"
-
+          android:onClick="tv_forget"
 
             />
 
