--- a/TracerStepAPP/app/src/main/res/layout/activity_location_type.xml
+++ b/TracerStepAPP/app/src/main/res/layout/activity_location_type.xml
@@ -69,12 +69,56 @@
             android:layout_weight="1"
             android:background="@drawable/custom_change_btn"
             android:gravity="center"
-            android:text="公交"
+           android:text="公交"
             android:textColor="#ffffff"
             android:textSize="18sp"
             android:onClick="setRoute"
             />
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/toptips"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="550dp"
+
+        android:gravity="center_horizontal">
+
+        <ImageButton
+            android:id="@+id/User_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="25dp"
+
+
+            android:layout_weight="1"
+            android:gravity="center"
+            android:src="@drawable/sort_one"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            android:onClick="setRoute"
+            />
+        <ImageButton
+            android:id="@+id/travel_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="25dp"
+            android:layout_marginRight="300dp"
+            android:layout_weight="1"
+
+            android:gravity="center"
+            android:src="@drawable/user"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            android:onClick="setRoute"
+            />
+    </RelativeLayout>>
 
     <RelativeLayout
         android:id="@+id/poi_detail"
@@ -130,7 +174,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@id/line_view"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
@@ -177,16 +221,19 @@
 
     <RelativeLayout
         android:id="@+id/poi_info"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_alignParentBottom="true"
-        android:background="#fff"
+
         android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="#D9ffffff"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -199,7 +246,8 @@
             <ListView
                 android:id="@+id/poi_list"
                 android:layout_width="match_parent"
-                android:layout_height="fill_parent" />
+                android:layout_height="fill_parent"
+                android:background="#D9ffffff"/>
         </LinearLayout>
 
     </RelativeLayout>
