--- a/TracerStepAPP/app/src/main/res/layout/activity_login.xml
+++ b/TracerStepAPP/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:background="@color/white"
             android:gravity="center"
-            android:hint="Name"
+            android:hint="用户名"
             android:inputType="text"
             android:padding="10dp"
 
@@ -49,7 +49,7 @@
             android:layout_marginBottom="80dp"
             android:background="@color/white"
             android:gravity="center"
-            android:hint="Password"
+            android:hint="密码"
             android:inputType="textPassword"
             android:padding="10dp"
             />
@@ -88,11 +88,10 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:gravity="center"
-            android:text="Register"
+            android:text="注册"
             android:textColor="#000000"
             android:textSize="15dp"
             android:textStyle="bold"
-            android:onClick="tv_register"
             />
 
         <TextView
@@ -102,11 +101,10 @@
             android:layout_height="wrap_content"
             android:background="@null"
             android:gravity="center"
-            android:text="Forget password"
+            android:text="忘记密码"
             android:textColor="#000000"
             android:textSize="15dp"
             android:textStyle="bold"
-          android:onClick="tv_forget"
 
             />
 
