--- a/TracerStepAPP/app/src/main/res/values/colors.xml
+++ b/TracerStepAPP/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="color_white">#fff</color>
     <color name="color_black">#191919</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="black">#FF000000</color>
+
 </resources>
