--- a/TracerStepAPP/app/src/main/res/layout/activity_show_uinfo.xml
+++ b/TracerStepAPP/app/src/main/res/layout/activity_show_uinfo.xml
@@ -4,10 +4,17 @@
     android:layout_height="fill_parent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="back2_btn"
+        android:text="Button" />
 
     <com.baidu.mapapi.map.MapView
         android:id="@+id/bmapView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent" >
+    </com.baidu.mapapi.map.MapView>
 
 </LinearLayout>
